[REFACTOR] change review endpoints