@@ -6,9 +6,17 @@ import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.JwtException;
 import org.gaung.wiwokdetok.fondasikehidupan.dto.ReviewRequestDTO;
 import org.gaung.wiwokdetok.fondasikehidupan.dto.ReviewResponseDTO;
+import org.gaung.wiwokdetok.fondasikehidupan.dto.UpdateReviewRequestDTO;
 import org.gaung.wiwokdetok.fondasikehidupan.dto.WebResponse;
+import org.gaung.wiwokdetok.fondasikehidupan.model.Book;
+import org.gaung.wiwokdetok.fondasikehidupan.model.Publisher;
+import org.gaung.wiwokdetok.fondasikehidupan.model.Review;
+import org.gaung.wiwokdetok.fondasikehidupan.model.ReviewId;
+import org.gaung.wiwokdetok.fondasikehidupan.repository.BookRepository;
+import org.gaung.wiwokdetok.fondasikehidupan.repository.PublisherRepository;
+import org.gaung.wiwokdetok.fondasikehidupan.repository.ReviewRepository;
 import org.gaung.wiwokdetok.fondasikehidupan.security.JwtUtil;
-import org.gaung.wiwokdetok.fondasikehidupan.service.ReviewService;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -18,15 +26,12 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.mockito.Mockito.any;
-import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
@@ -48,140 +53,168 @@ public class ReviewControllerTest {
     @MockBean
     private JwtUtil jwtUtil;
 
-    @MockBean
-    private ReviewService reviewService;
+    @Autowired
+    private BookRepository bookRepository;
 
-    private UUID userId;
-    private Long bookId;
+    @Autowired
+    private PublisherRepository publisherRepository;
+
+    @Autowired
+    private ReviewRepository reviewRepository;
+
+    private UUID userId1;
+
+    private UUID userId2;
+
+    private Book book;
 
     @BeforeEach
     void setUp() {
-        userId = UUID.randomUUID();
-        bookId = 1L;
+        userId1 = UUID.randomUUID();
+        userId2 = UUID.randomUUID();
+
+        Publisher publisher = new Publisher();
+        publisher.setName("publisher");
+        publisherRepository.save(publisher);
+
+        book = new Book();
+        book.setTitle("Book Title");
+        book.setIsbn("978-0-306-40615-7");
+        book.setSynopsis("Book Synopsis");
+        book.setBookPicture("https://example.com");
+        book.setPublisher(publisher);
+        bookRepository.save(book);
+
+        ReviewId reviewId = new ReviewId(userId2, book.getId());
+
+        Review review = new Review();
+        review.setId(reviewId);
+        review.setBook(book);
+        review.setRating(5);
+        review.setMessage("Mantap");
+        reviewRepository.save(review);
+    }
+
+    @AfterEach
+    void tearDown() {
+        reviewRepository.deleteAll();
+        bookRepository.deleteAll();
+        publisherRepository.deleteAll();
     }
 
     @Test
     void testSubmitReviewSuccess() throws Exception {
         Claims claims = mock(Claims.class);
         when(jwtUtil.decodeToken("valid.token")).thenReturn(claims);
-        when(jwtUtil.getId(claims)).thenReturn(userId);
+        when(jwtUtil.getId(claims)).thenReturn(userId1);
         when(jwtUtil.getRole(claims)).thenReturn("USER");
 
-        ReviewRequestDTO request = new ReviewRequestDTO(bookId, "Mantap", 5);
-        doNothing().when(reviewService).submitReview(any(UUID.class), any(ReviewRequestDTO.class));
+        ReviewRequestDTO request = new ReviewRequestDTO();
+        request.setMessage("Mantap");
+        request.setRating(5);
 
         mockMvc.perform(
-                        post("/reviews")
-                                .header("Authorization", "Bearer valid.token")
-                                .contentType(MediaType.APPLICATION_JSON)
-                                .content(objectMapper.writeValueAsString(request))
-                                .accept(MediaType.APPLICATION_JSON)
-                ).andExpect(status().isCreated())
-                .andDo(result -> {
-                    WebResponse<String> response = objectMapper.readValue(
-                            result.getResponse().getContentAsString(),
-                            new TypeReference<>() {}
-                    );
-                    assertNotNull(response.getData());
-                    assertNull(response.getErrors());
-                });
+                post("/books/{bookId}/reviews", book.getId())
+                        .header("Authorization", "Bearer valid.token")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(request))
+                        .accept(MediaType.APPLICATION_JSON)
+        ).andExpect(
+                status().isCreated()
+        ).andDo(result -> {
+            WebResponse<String> response = objectMapper.readValue(result.getResponse().getContentAsString(), new TypeReference<>() {
+            });
+            assertNotNull(response.getData());
+            assertNull(response.getErrors());
+        });
     }
 
     @Test
     void testUpdateReviewSuccess() throws Exception {
         Claims claims = mock(Claims.class);
         when(jwtUtil.decodeToken("valid.token")).thenReturn(claims);
-        when(jwtUtil.getId(claims)).thenReturn(userId);
+        when(jwtUtil.getId(claims)).thenReturn(userId2);
         when(jwtUtil.getRole(claims)).thenReturn("USER");
 
-        ReviewRequestDTO request = new ReviewRequestDTO(bookId, "Updated Review", 4);
-
-        doNothing().when(reviewService).updateReview(any(UUID.class), any(ReviewRequestDTO.class));
+        UpdateReviewRequestDTO request = new UpdateReviewRequestDTO();
+        request.setMessage("Mantap");
+        request.setRating(5);
 
         mockMvc.perform(
-                        patch("/reviews")
-                                .header("Authorization", "Bearer valid.token")
-                                .contentType(MediaType.APPLICATION_JSON)
-                                .content(objectMapper.writeValueAsString(request))
-                                .accept(MediaType.APPLICATION_JSON)
-                ).andExpect(status().isOk())
-                .andDo(result -> {
-                    WebResponse<String> response = objectMapper.readValue(
-                            result.getResponse().getContentAsString(),
-                            new TypeReference<>() {}
-                    );
-                    assertNotNull(response.getData());
-                    assertNull(response.getErrors());
-                });
+                patch("/books/{bookId}/reviews/{userId}", book.getId(), userId2)
+                        .header("Authorization", "Bearer valid.token")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(request))
+                        .accept(MediaType.APPLICATION_JSON)
+        ).andExpect(
+                status().isOk()
+        ).andDo(result -> {
+            WebResponse<String> response = objectMapper.readValue(result.getResponse().getContentAsString(), new TypeReference<>() {
+            });
+            assertNotNull(response.getData());
+            assertNull(response.getErrors());
+        });
     }
 
     @Test
     void testGetReviewsForBookSuccessWithoutAuth() throws Exception {
-        OffsetDateTime now = OffsetDateTime.now();
-        List<ReviewResponseDTO> reviews = List.of(
-                new ReviewResponseDTO(userId, bookId, "Keren", 5, now, now)
-        );
-
-        when(reviewService.getReviewsForBook(bookId)).thenReturn(reviews);
-
         mockMvc.perform(
-                        get("/reviews/book/{bookId}", bookId)
-                                .accept(MediaType.APPLICATION_JSON)
-                ).andExpect(status().isOk())
-                .andDo(result -> {
-                    WebResponse<List<ReviewResponseDTO>> response = objectMapper.readValue(
-                            result.getResponse().getContentAsString(),
-                            new TypeReference<>() {}
-                    );
-                    assertEquals(1, response.getData().size());
-                    assertEquals("Keren", response.getData().get(0).getMessage());
-                });
+                get("/books/{bookId}/reviews", book.getId())
+                        .accept(MediaType.APPLICATION_JSON)
+        ).andExpect(
+                status().isOk()
+        ).andDo(result -> {
+            WebResponse<List<ReviewResponseDTO>> response = objectMapper.readValue(result.getResponse().getContentAsString(), new TypeReference<>() {
+            });
+            assertEquals(1, response.getData().size());
+            assertEquals("Mantap", response.getData().getFirst().getMessage());
+            assertNull(response.getErrors());
+        });
     }
 
     @Test
     void testDeleteReviewSuccess() throws Exception {
         Claims claims = mock(Claims.class);
         when(jwtUtil.decodeToken("valid.token")).thenReturn(claims);
-        when(jwtUtil.getId(claims)).thenReturn(userId);
+        when(jwtUtil.getId(claims)).thenReturn(userId2);
         when(jwtUtil.getRole(claims)).thenReturn("USER");
 
-        doNothing().when(reviewService).deleteReview(userId, bookId);
-
         mockMvc.perform(
-                        delete("/reviews/{bookId}", bookId)
-                                .header("Authorization", "Bearer valid.token")
-                                .accept(MediaType.APPLICATION_JSON)
-                ).andExpect(status().isOk())
-                .andDo(result -> {
-                    WebResponse<String> response = objectMapper.readValue(
-                            result.getResponse().getContentAsString(),
-                            new TypeReference<>() {}
-                    );
-                    assertEquals("OK", response.getData());
-                    assertNull(response.getErrors());
-                });
+                delete("/books/{bookId}/reviews/{usedId}", book.getId(), userId2)
+                        .header("Authorization", "Bearer valid.token")
+                        .accept(MediaType.APPLICATION_JSON)
+        ).andExpect(
+                status().isOk()
+        ).andDo(result -> {
+            WebResponse<String> response = objectMapper.readValue(result.getResponse().getContentAsString(), new TypeReference<>() {
+            });
+            assertEquals("OK", response.getData());
+            assertNull(response.getErrors());
+        });
     }
 
 
     @Test
     void testUnauthorizedAccessSubmitReview() throws Exception {
-        when(jwtUtil.decodeToken("invalid.token")).thenThrow(new JwtException("Invalid token"));
+        when(jwtUtil.decodeToken("invalid.token"))
+                .thenThrow(new JwtException("Invalid token"));
 
-        ReviewRequestDTO request = new ReviewRequestDTO(bookId, "Unauthorized", 3);
+        ReviewRequestDTO request = new ReviewRequestDTO();
+        request.setMessage("Mantap");
+        request.setRating(5);
 
         mockMvc.perform(
-                        post("/reviews")
-                                .header("Authorization", "Bearer invalid.token")
-                                .contentType(MediaType.APPLICATION_JSON)
-                                .content(objectMapper.writeValueAsString(request))
-                ).andExpect(status().isUnauthorized())
-                .andDo(result -> {
-                    WebResponse<?> response = objectMapper.readValue(
-                            result.getResponse().getContentAsString(),
-                            new TypeReference<>() {}
-                    );
-                    assertNull(response.getData());
-                    assertNotNull(response.getErrors());
-                });
+                post("/books/{bookId}/reviews", book.getId())
+                        .header("Authorization", "Bearer invalid.token")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(request))
+        ).andExpect(
+                status().isUnauthorized()
+        ).andDo(result -> {
+            WebResponse<?> response = objectMapper.readValue(result.getResponse().getContentAsString(), new TypeReference<>() {
+            });
+            assertNull(response.getData());
+            assertNotNull(response.getErrors());
+        });
     }
 }
